--- a/JumpVerse/App.xaml
+++ b/JumpVerse/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:JumpVerse"
-             StartupUri="/Views/JumpVerseInicio.xaml">
+             StartupUri="/Views/NivelUno.xaml">
     <Application.Resources>
          
     </Application.Resources>
