--- a/JumpVerse/Views/NivelUNO.xaml
+++ b/JumpVerse/Views/NivelUNO.xaml
@@ -4,8 +4,12 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:JumpVerse.Views"
+        xmlns:mv="clr-namespace:JumpVerse.ViewModels"
         mc:Ignorable="d"
         Title="NivelUNO" Height="450" Width="800" MaxHeight="450" MaxWidth="800">
+    <Window.DataContext>
+        <mv:MovimientoViewModel></mv:MovimientoViewModel>
+    </Window.DataContext>
     <Window.Background>
         <ImageBrush ImageSource="/Source/nivel1finalpixel.jpg"></ImageBrush>
     </Window.Background>
@@ -50,19 +54,21 @@
             </StackPanel>
         </Canvas>
         <Canvas>
-            <Grid Canvas.Top="300" Canvas.Left="70">
-                <Image Width="100" Height="100" Source="/Source/arriba.png"></Image>
-
+            <Grid Canvas.Top="{Binding CanvasTop}" Canvas.Left="{Binding CanvasLeft}">
+                <Image Width="100" Height="100" Source="{Binding SourceImage}"></Image>
             </Grid>
         </Canvas>
         <WrapPanel Margin="0,0,0,10"  HorizontalAlignment="Center" VerticalAlignment="Bottom">
            
-                <Button BorderThickness="1" BorderBrush="White" Background="Black" Margin="2" Width="35" Height="35" >
+                <Button Command="{Binding GirarCommand}" CommandParameter="2" BorderThickness="1" BorderBrush="White" Background="Black" Margin="2" Width="35" Height="35" >
                 <Label Foreground="White" FontSize="20" FontFamily="Marlett">3</Label></Button>
-            <Button BorderThickness="1" BorderBrush="White" Background="Black" Margin="2" Width="35" Height="35" >
+            <Button  Command="{Binding GirarCommand}" CommandParameter="1" BorderThickness="1" BorderBrush="White" Background="Black" Margin="2" Width="35" Height="35" >
                 <Label Foreground="White" FontSize="20" FontFamily="Marlett">4</Label></Button>
-            <Button BorderThickness="1" BorderBrush="White" Background="Black" Foreground="White" Margin="2" Width="35" Height="35">
+            <Button Command="{Binding AdelanteCommand}" BorderThickness="1" BorderBrush="White" Background="Black" Foreground="White" Margin="2" Width="35" Height="35">
                 <Label Foreground="White" FontSize="20" FontFamily="Marlett">5</Label>
+            </Button>
+            <Button Command="{Binding SaltarCommand}" BorderThickness="1" BorderBrush="White" Background="Black" Foreground="White" Margin="2" Width="75" Height="35">
+                <Label Foreground="White" FontSize="20" FontFamily="Verdana">Jump</Label>
             </Button>
         </WrapPanel>
         
